--- a/colonel-kurtz/style/components/tabs.scss
+++ b/colonel-kurtz/style/components/tabs.scss
@@ -77,9 +77,4 @@ $colonel-tabs-font: 500 14px/16px sans-serif !default;
     border: 0;
     box-shadow: none;
   }
-
-  &::-moz-focus-inner {
-    border: 0;
-    padding: 0;
-  }
 }
